--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Base64</title>
+<title>Text Encoder/Decoder</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
@@ -24,14 +24,42 @@ body {
     padding: 40px;
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-    max-width: 500px;
+    max-width: 600px;
     width: 90%;
     text-align: center;
 }
 
 h1 {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-weight: 600;
+}
+
+.tabs {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 5px;
+    justify-content: flex-start;
+    margin-bottom: 15px;
+    scrollbar-width: none;
+}
+
+.tabs::-webkit-scrollbar {
+    display: none;
+}
+
+.tab {
+    padding: 8px 12px;
+    border-radius: 10px 10px 0 0;
+    background-color: #6c4dff;
+    cursor: pointer;
+    white-space: nowrap;
+    flex-shrink: 0;
+    transition: 0.3s;
+}
+
+.tab.active {
+    background-color: #570ed4;
 }
 
 textarea {
@@ -46,8 +74,8 @@ textarea {
 }
 
 #dropArea {
-    margin-top: 20px;
-    padding: 20px;
+    margin-bottom: 15px;
+    padding: 15px;
     border: 2px dashed rgba(255,255,255,0.5);
     border-radius: 10px;
     cursor: pointer;
@@ -65,13 +93,10 @@ textarea {
     min-height: 50px;
     max-height: 200px;
     font-size: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    word-break: break-all;
+    display: block;
+    text-align: left;
     overflow-y: auto;
-    scrollbar-width: thin; 
-    scrollbar-color: rgba(255,255,255,0.4) transparent;
+    word-break: break-all;
 }
 
 #resultContainer::-webkit-scrollbar {
@@ -79,24 +104,13 @@ textarea {
 }
 
 #resultContainer::-webkit-scrollbar-track {
-    background: transparent;
+    background: rgba(255,255,255,0.1);
+    border-radius: 10px;
 }
 
 #resultContainer::-webkit-scrollbar-thumb {
-    background-color: rgba(255,255,255,0.4);
+    background: rgba(255,255,255,0.3);
     border-radius: 10px;
-    border: 2px solid transparent;
-    background-clip: content-box;
-}
-
-#resultContainer::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255,255,255,0.6);
-}
-
-#result {
-    text-align: left;
-    flex: 1;
-    white-space: pre-wrap;
 }
 
 .button, .copy-btn, .reverse-btn {
@@ -142,21 +156,33 @@ textarea {
 <body>
 
 <div class="container">
-    <h1>Base64 Encoder/Decoder</h1>
-    <textarea id="inputText" placeholder="Enter text or Base64 here"></textarea>
-    <br>
+    <h1>Text Encoder/Decoder</h1>
+
+    <div class="tabs">
+        <div class="tab active" data-type="base64">Base64</div>
+        <div class="tab" data-type="hex">Hex</div>
+        <div class="tab" data-type="url">URL</div>
+        <div class="tab" data-type="html">HTML</div>
+        <div class="tab" data-type="unicode">Unicode</div>
+        <div class="tab" data-type="ascii">ASCII</div>
+        <div class="tab" data-type="morse">Morse</div>
+        <div class="tab" data-type="binary">Binary</div>
+        <div class="tab" data-type="octal">Octal</div>
+    </div>
+
+    <textarea id="inputText" placeholder="Enter text here..."></textarea>
 
     <div id="dropArea">Drag & Drop a text file here or click to select</div>
     <input type="file" id="fileInput" style="display:none;">
 
-    <br>
-    <button class="button" onclick="encodeBase64()">Encode</button>
-    <button class="button" onclick="decodeBase64()">Decode</button>
+    <button class="button" onclick="encodeText()">Encode</button>
+    <button class="button" onclick="decodeText()">Decode</button>
     <button class="reverse-btn" onclick="reverseText()">Reverse</button>
 
     <div id="resultContainer">
         <div id="result"></div>
     </div>
+
     <button class="copy-btn" onclick="copyResult(this)">Copy</button>
 </div>
 
@@ -165,64 +191,16 @@ const inputText = document.getElementById("inputText");
 const resultDiv = document.getElementById("result");
 const dropArea = document.getElementById("dropArea");
 const fileInput = document.getElementById("fileInput");
+let currentType = "base64";
 
-let mode = "encode";
-
-function encodeBase64() {
-    const input = inputText.value;
-    if (!input) {
+document.querySelectorAll(".tab").forEach(tab => {
+    tab.addEventListener("click", () => {
+        document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
+        tab.classList.add("active");
+        currentType = tab.dataset.type;
         resultDiv.innerText = "";
-        return;
-    }
-    try {
-        resultDiv.innerText = btoa(unescape(encodeURIComponent(input)));
-    } catch {
-        resultDiv.innerText = "Error encoding text";
-    }
-}
-
-function decodeBase64() {
-    const input = inputText.value;
-    if (!input) {
-        resultDiv.innerText = "";
-        return;
-    }
-    try {
-        resultDiv.innerText = decodeURIComponent(escape(atob(input)));
-    } catch {
-        resultDiv.innerText = "Error: Invalid Base64 input";
-    }
-}
-
-function reverseText() {
-    const temp = inputText.value;
-    inputText.value = resultDiv.innerText;
-    resultDiv.innerText = temp;
-    mode = mode === "encode" ? "decode" : "encode";
-    if (mode === "encode") encodeBase64();
-    else decodeBase64();
-}
-
-function copyResult(button) {
-    const text = resultDiv.innerText;
-    if (!text) return;
-    navigator.clipboard.writeText(text).then(() => {
-        animateCopyButton(button);
     });
-}
-
-function animateCopyButton(button) {
-    button.classList.add("copied");
-    setTimeout(() => button.classList.remove("copied"), 280);
-}
-
-inputText.addEventListener("input", () => {
-    if (mode === "encode") encodeBase64();
-    else decodeBase64();
 });
-
-document.querySelectorAll(".button")[0].addEventListener("click", () => mode = "encode");
-document.querySelectorAll(".button")[1].addEventListener("click", () => mode = "decode");
 
 dropArea.addEventListener("dragover", (e) => {
     e.preventDefault();
@@ -236,27 +214,80 @@ dropArea.addEventListener("dragleave", () => {
 dropArea.addEventListener("drop", (e) => {
     e.preventDefault();
     dropArea.classList.remove("dragover");
-    const file = e.dataTransfer.files[0];
-    if (file) readFile(file);
+    if(e.dataTransfer.files[0]) readFile(e.dataTransfer.files[0]);
 });
 
 dropArea.addEventListener("click", () => fileInput.click());
 fileInput.addEventListener("change", () => {
-    if (fileInput.files[0]) readFile(fileInput.files[0]);
+    if(fileInput.files[0]) readFile(fileInput.files[0]);
 });
 
 function readFile(file) {
-    if (!file.type.startsWith("text/")) {
-        resultDiv.innerText = "Error: Only text files are allowed (PNG or other files are not supported)";
+    if(!file.type.startsWith("text/")) {
+        resultDiv.innerText = "Error: Only text files are allowed";
         return;
     }
     const reader = new FileReader();
     reader.onload = () => {
         inputText.value = reader.result;
-        if (mode === "encode") encodeBase64();
-        else decodeBase64();
     };
     reader.readAsText(file);
+}
+
+const morseMap = {
+    'A':'.-','B':'-...','C':'-.-.','D':'-..','E':'.','F':'..-.','G':'--.',
+    'H':'....','I':'..','J':'.---','K':'-.-','L':'.-..','M':'--','N':'-.',
+    'O':'---','P':'.--.','Q':'--.-','R':'.-.','S':'...','T':'-','U':'..-',
+    'V':'...-','W':'.--','X':'-..-','Y':'-.--','Z':'--..',
+    '0':'-----','1':'.----','2':'..---','3':'...--','4':'....-','5':'.....',
+    '6':'-....','7':'--...','8':'---..','9':'----.',' ':'/','!':'-.-.--',
+    '?':'..--..', '.':'.-.-.-', ',':'--..--', ':':'---...'
+};
+
+function encodeText() {
+    const input = inputText.value;
+    if(!input) return resultDiv.innerText = "";
+
+    switch(currentType){
+        case "base64": try{resultDiv.innerText = btoa(unescape(encodeURIComponent(input)));} catch{resultDiv.innerText="Error encoding Base64";} break;
+        case "hex": resultDiv.innerText = Array.from(input).map(c=>c.charCodeAt(0).toString(16).padStart(2,'0')).join(' '); break;
+        case "url": resultDiv.innerText = encodeURIComponent(input); break;
+        case "html": resultDiv.innerText = input.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;').replace(/'/g,'&#39;'); break;
+        case "unicode": resultDiv.innerText = Array.from(input).map(c=>'\\u'+c.charCodeAt(0).toString(16).padStart(4,'0')).join(' '); break;
+        case "ascii": resultDiv.innerText = Array.from(input).map(c=>c.charCodeAt(0)).join(' '); break;
+        case "morse": resultDiv.innerText = Array.from(input.toUpperCase()).map(c=>morseMap[c]||'').join(' '); break;
+        case "binary": resultDiv.innerText = Array.from(input).map(c=>c.charCodeAt(0).toString(2).padStart(8,'0')).join(' '); break;
+        case "octal": resultDiv.innerText = Array.from(input).map(c=>c.charCodeAt(0).toString(8).padStart(3,'0')).join(' '); break;
+    }
+}
+
+function decodeText() {
+    const input = inputText.value;
+    if(!input) return resultDiv.innerText = "";
+
+    switch(currentType){
+        case "base64": try{resultDiv.innerText = decodeURIComponent(escape(atob(input)));} catch{resultDiv.innerText="Error decoding Base64";} break;
+        case "hex": try{resultDiv.innerText = input.split(' ').map(h=>String.fromCharCode(parseInt(h,16))).join('');} catch{resultDiv.innerText="Invalid Hex input";} break;
+        case "url": try{resultDiv.innerText = decodeURIComponent(input);} catch{resultDiv.innerText="Invalid URL input";} break;
+        case "html": const txt=document.createElement("textarea"); txt.innerHTML=input; resultDiv.innerText=txt.value; break;
+        case "unicode": try{resultDiv.innerText = input.split(' ').map(u=>String.fromCharCode(parseInt(u.replace('\\u',''),16))).join('');} catch{resultDiv.innerText="Invalid Unicode input";} break;
+        case "ascii": try{resultDiv.innerText = input.split(' ').map(n=>String.fromCharCode(parseInt(n))).join('');} catch{resultDiv.innerText="Invalid ASCII input";} break;
+        case "morse": try{const revMorse=Object.fromEntries(Object.entries(morseMap).map(([k,v])=>[v,k])); resultDiv.innerText=input.split(' ').map(c=>revMorse[c]||'').join('');} catch{resultDiv.innerText="Invalid Morse input";} break;
+        case "binary": try{resultDiv.innerText = input.split(' ').map(b=>String.fromCharCode(parseInt(b,2))).join('');} catch{resultDiv.innerText="Invalid Binary input";} break;
+        case "octal": try{resultDiv.innerText = input.split(' ').map(o=>String.fromCharCode(parseInt(o,8))).join('');} catch{resultDiv.innerText="Invalid Octal input";} break;
+    }
+}
+
+function reverseText(){
+    const temp=inputText.value;
+    inputText.value=resultDiv.innerText;
+    resultDiv.innerText=temp;
+}
+
+function copyResult(button){
+    const text=resultDiv.innerText;
+    if(!text) return;
+    navigator.clipboard.writeText(text).then(()=>{button.classList.add("copied"); setTimeout(()=>button.classList.remove("copied"),280);});
 }
 </script>
 
